--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@web3auth/base": "^4.6.0",
     "@web3auth/modal": "^4.6.2",
     "@web3auth/openlogin-adapter": "^4.6.0",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
